Fixed text overflow in dog's name and petshop name

--- a/app/assets/stylesheets/reset.css
+++ b/app/assets/stylesheets/reset.css
@@ -538,3 +538,10 @@ li {
 .inherit-width{
   width: 100%;
 }
+
+.truncate {
+  width: 350px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
